--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="clone.css">
+
+    <!--fonts link-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@100;200;300;400;500;600&display=swap" rel="stylesheet">
+
     <title>Clone Project</title>
 </head>
 <body>
@@ -13,7 +23,7 @@
     <!--NAVIGATION SECTION-->
     <div class="nav">
         <nav>
-            <img src="logo.png" alt="logo" width="5%"> 
+            <img src="logo.png" alt="logo" width="50px"> 
 
             <div class="nav-links">
                 <div><a href="#home" >Home</a></div>
@@ -229,9 +239,12 @@
     <!--PERSONNEL SECTION-->
     <div class="personnel">
 
-        <div> <img src="face.png" alt="boss" width="70%" style="margin-top: 150px;"></div>
+        <div> <img src="face.png" alt="boss" width="70%"></div>
+
         <p class="name">Jeffery Thomas</p>
+
         <p class="position">Creative Director</p>
+
         <div class="about"> <i>"I am at an age where I just want to be fit. Our bodies are our responsibilities. So, start taking care of your body and it will take care of you. Eat, clean it and work out hard everyday."</i> </div>
     
     </div>
@@ -257,7 +270,8 @@
     
     </div>
 
-    <!--NEWS SECTION-->
+    <!--NEWS 
+        SECTION-->
     <div class="blogs">
 
         <p class="first">OUR LATEST BLOG</p><br>
