--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -354,4 +353,7 @@
     </div>
 
 </body>
+<script>
+    
+</script>
 </html>
